# liewei-agi-code-part2

./: README.md  使用说明.txt
21 CenterLoss/test_20210323/: test01.py  test02.py  test03.py
22 ArcFace/Arcface/: ArcLoss.py  Module.py  Train_Arc.py
24 网络优化/test_20210323/: test01.py  test03.py  test04.py  test05.py
24 网络优化/test_20210330/: test01.py  test02.py  test03.py
25 网络设计/: .gitattributes
25 网络设计/test_20210401/: test.py  test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py
26 yolo_v3/yolov3/: cfg.py  dataset.py  detector.py  module.py  person_label.txt  test.py  test01.py  test02.py  test03.py  test04.py  trainer.py  utils.py
27 RNN/test_20210415/: gen_Sample.py  test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py
28 编解码结构/test_20210420/: auto_encoder.py  autu_encoder_cnn.py  cnn2seq.py  data.py  seq2seq.py
29 GAN/test_20210422/: DC_GAN.py  DC_GAN_face.py  Gan.py  face_data.py  test01.py  train_dc_gan.py  train_face.py
30 DRL/test_20210427/: DQN01.py  DQN02.py  Q_Learning.py  test01.py  test02.py  test03.py
31 UNet/U_Net/: .gitattributes  MKDataset.py  UNet.py  module.pth  train.py
32 U2Net/U2_Net/: crop.py  data_loader.py  u2net_test.py  u2net_train.py
32 U2Net/test_20210506/: test01.py  test02.py  test03.py  test04.py
33 模型部署/test_20210513/: 169.t  client.html  httpserver.py  net.py
34 模型压缩/c++code/: CMakeLists.txt  main.cpp
34 模型压缩/test_20210518/: super_resolution.onnx  test01.py  test03.py  test04.py  test05.py  test06.py  test07.py
35 余弦褪火/test_20210520/: test01.py  test02.py
(+4 files in other folders)
